# Sourcery

./: .gitignore  README.md
C/: bitops.c  cmain.c  ex2.c  ex4.c  matrix.c  palindrome.c  permutations.c  size.c  stack.c  vowel.c
C/C_macro_example/: macro_test.cpp  recons.cpp  recons.def
C_macro_example/: constexpr_test.cpp
Cpp/: filesys_test.cpp  function_ptr.cpp  print.cpp  strjoin.cpp
Cpp/Cython/: Makefile  embedCython.cpp  setup.py
Cpp/Cython/src/: foothing.pyx  libfoo.cpp  libfoo.hpp
Cpp/Cython/tempo/mymod/: foo.py
Cpp/EmbedPy/: Makefile  embednpy.cpp  embednumpy.cpp  embednumpy_exmacro.h  embedpy1.c  embedpy2.cpp  embedpy3.cpp  embedpyinc.md  mymodule.py  pyemb3.py  pyemb7.py  python_c_api.md  test_goto.c  test_module_load.py  test_pyobject.cpp
Cpp/EmbedPy/interp/: Makefile  PyObjectDecl.h  PyObjectPtr.cpp  PyObjectPtr.h  PythonInterpreter.cpp  PythonInterpreter.h  pythonintrp_main.cpp
Cpp/PyCore/: CMakeLists.txt
Cpp/PyCore/Embed/: PyCore.h  PyInterpreter.cpp  PyInterpreter.h  PyObjectDecl.h  PyObjectPtr.cpp  PyObjectPtr.h
Cpp/Qt/button/: myworkspace.pro
Cpp/Qt/qlistview/: listview_ex.cpp  listview_ex.pro  qtablemodel.cpp
Cpp/Qt/qstr/: test_qstr.cpp  test_qstr.pro
Cpp/Qt/simple/: simple.pro
Cpp/Qt/table/: qt_ex2.pro  qtable.cpp
Cpp/Qt/textwindow/: textwindow.cpp  textwindow.pro
Cpp/Qt/tooltip/: tooltip.cpp  tooltip.pro
Cpp/Qt/version/: version.cpp
Cpp/algo/: array_invert.cpp  base_derived.cpp  diamond.cpp  ex1.cpp  ex3.cpp  ex5.cpp  fast_swap.cpp  queue.cpp  queue_class.cpp  unique_ptr.cpp
Cpp/getPyObject/: Makefile  get_pyArray.cpp  get_pyFunction.cpp  get_pyTuple.cpp  my_module.py
Cpp/getPyObject/pycore/: CMakeLists.txt  my_module.py  pycore.cpp  pycore.hpp  testpy.cpp
Cpp/hdf5/: Makefile  readh5.cpp  test_row_mat.cpp  test_slab.cpp  writeh5.cpp  writematrix.cpp  writestates.cpp
Cpp/pySWIG/: Makefile  example.cpp  example.h  example.i  example.py  example_wrap.cpp  test_example.py
Cpp/pySWIG/extend/: Makefile  MyClass.cpp  MyClass.h  MyClass.i  test_MyClass.py
Cpp/sharedlib/mac/: Makefile  README.md  main.c  mylib.c  mylib.h  myotherlib.c  myotherlib.h
Cpp/zip/: CMakeLists.txt  ztest.cpp
Fortran/Cythonize/: Makefile  fort.pyx  mesh.f08  setup.py
Fortran/mcmc/: Makefile  ising_mcmc.f90  libisingmc.py
Fortran/sharedlib/: Makefile  arr_mean.c  arr_mean.f08  arr_mean.py
Fortran/simple/: ieee_arithmetic.f08  matmul.f08  measuretime.f90  pointers.f08
Fortran/struct_interop/: Makefile  struct_interop.f90  test_struct_interop.c
Lisp/chezscheme/modules/: README.md
Lisp/chezscheme/p0/: Akku.manifest  myprj.sls
Lisp/chezscheme/p0/tests/: test-myprj.sps
Lisp/chezscheme/p1/: capture_shell_output.scm  myprj.sps  shelloutput.scm  test1.scm
Lisp/chezscheme/p1/dot.akku/: list
Lisp/chezscheme/p1/dot.akku/lib/wak/: irregex.sls
Lisp/chezscheme/p1/dot.akku/lib/wak/private/: define-values.chezscheme.sls  define-values.sls
Lisp/chezscheme/p1/dot.akku/lib/wak/private/include/: compat.ikarus.sls  compat.mosh.sls  compat.mzscheme.sls  compat.ypsilon.sls
Lisp/chezscheme/p1/extra/: irregex.sls
Lisp/chezscheme/p1/extra/private/: include.sls
Lisp/chezscheme/p1/extra/private/include/: compat.chezscheme.sls  filesys.sls  helper.sls  utils.sls
Lisp/chezscheme/p1/lib/: myprj.sls
Lisp/chezscheme/p2/: runshell.scm  runshell_2.scm  runshell_3.scm
Lisp/chezscheme/p3/: run-shell.scm
Lisp/chezscheme/p4/: run_shell_cmd.scm
Lisp/racket/: racket_macros.rkt  test.rkt  test.scm  test_cmd.scm
Maxima/: complex.mac
Python/: 2d_interp.py  adaptivefn.py  bit_test.py  concurrency_example.py.ipynb  future_test.py  inheritance_test.py
Python/C extension/: demomodule.c  setup.py
Python/PyQt/: Qt_Window.py  combobox.py  grid_toolbutton.py  gridlayout.py  qt_test.py  qtexception.py  stackedwidget_qt.py  stackedwidget_qt2.py  table_model.py  tablewidget.py  test_widget.py  tooltip.py
Python/console/: test_color.py
Python/laplace/: bilaplace.py  bilaplace_0.py
Python/nose_tests/: test1.py
Python/pyparse/: parsemarkup.py  pyparse_test.py  pyparsing.ipynb
cmake/cmake_minimal/: CMakeLists.txt  build_project.sh  main.c  mk.sh  qux.c  qux.h
cmake/duplicateLibNamesWin/: CMakeLists.txt  prime2.c
cmake/funks/: CMakeLists.txt
cmake/multiPython/: CMakeLists.txt  findMultiPython.cmake  findMultiPython0.cmake
cmake/readconf/: CMakeLists.txt  findfile.cmake
cmake/readconf/pkgconfig/: libcerf.pc
cmake/targetProperties/: CMakeLists.txt
cmake_minimal/: CMakeLists.txt  mk.sh
duplicateLibNamesWin/: main.c  prime1.c
notes/: ukernel.md  ukernel2.md
notes/llm/: llms_at_work.tex
